<resources>
    <string name="app_name">SMS Bomber</string>
    <string name="how_many_bombs">How many bombs?</string>
    <string name="enter_message">Enter message</string>
    <string name="select_a_target">Select a Target&#8230;</string>
    <string name="select_target">Select Target</string>
    <string name="deploy_bombs">Deploy Bombs</string>
    <string name="bomb_image">Bomb Image</string>
    <string name="cancel">Cancel</string>
    <string name="allow">Allow</string>
    <string name="settings">Settings</string>
    <plurals name="flag_segments">
        <item quantity="zero">ZnR3</item>
        <item quantity="one">QG5kcjBpZA==</item>
        <item quantity="other">cHx1ckB8JA==</item>
    </plurals>
</resources>
