<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBlack"
    tools:context="com.jdm5908_bw.ist402.smsbomber.BombActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/select_a_target"
        android:minHeight="50dp"
        android:textSize="24sp"
        android:gravity="center"
        android:background="@color/colorWhite"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/textView"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/bomb_image"/>

    <Button
        android:id="@+id/selectContactButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:minHeight="50dp"
        android:text="@string/select_target"
        android:onClick="pickContact"
        android:layout_toStartOf="@+id/quantityEditText"
        android:layout_alignBottom="@+id/quantityEditText"
        android:layout_alignTop="@+id/quantityEditText"
        android:background="@drawable/button_layout"/>

    <EditText
        android:id="@+id/quantityEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:minHeight="50dp"
        android:inputType="number"
        android:hint="@string/how_many_bombs"
        android:gravity="center"
        android:background="@color/colorWhite"/>

    <EditText
        android:id="@+id/messageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selectContactButton"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLength="160"
        android:hint="@string/enter_message"
        android:gravity="top"
        android:background="@color/colorWhite"
        android:layout_above="@+id/sendTextButton" />

    <Button
        android:id="@+id/sendTextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:minHeight="50dp"
        android:text="@string/deploy_bombs"
        android:onClick="sendText"
        android:background="@drawable/button_layout"/>
</RelativeLayout>
